# drosynth

./: CMakeLists.txt  README.md
analysis/: simple_ladder.m  simple_ladder.py  test.m
include/: SineWave.hpp  adsr.hpp  filter.hpp  huovilainen_ladder.hpp  midievent.hpp  midiinput.hpp  oscillator.hpp  simplified_ladder.hpp  squarewave.hpp  synthesizer.hpp  trianglewave.hpp  vca.hpp  voice.hpp  waveform.hpp
resources/portaudio/bindings/cpp/: CMakeLists.txt
resources/portaudio/bindings/cpp/lib/.deps/: CFunCallbackStream.Plo  CppFunCallbackStream.Plo  DirectionSpecificStreamParameters.Plo  HostApi.Plo  InterfaceCallbackStream.Plo  MemFunCallbackStream.Plo  Stream.Plo  System.Plo  SystemDeviceIterator.Plo
src/: SineWave.cpp  adsr.cpp  file1.cpp  filter.cpp  huovilainen_ladder.cpp  main.cpp  midievent.cpp  midiinput.cpp  oscillator.cpp  simplified_ladder.cpp  squarewave.cpp  squarewave.hpp  synthesizer.cpp  trianglewave.cpp  vca.cpp  voice.cpp  waveform.cpp
